[package]
name = "timeleapcam"
version = "0.2.0"
authors = ["Hiroshi Nakajima <hnakamiru1103@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"
build = "build.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]
[dependencies]
anyhow = "1"
esp-idf-sys = { version = "0.34.1" }
esp-idf-svc = { version = "0.48.1" }
log = "0.4"
esp-idf-hal = "0.43.1"
embedded-hal = "1.0.0"
embedded-svc = "0.27.1"
esp-camera-rs = { git = "https://github.com/hnz1102/esp-camera-rs.git" }
toml-cfg = "0.2.0"
heapless = "0.8.0"
url = "2.5.0"
serde_json = "1.0.117"
chrono = "0.4.38"
config = "0.14.0"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
embuild = "0.31.3"
anyhow = "1"
cc = "1.0"
git2 = "0.16.1"
cmake = "0.1.50"

[package.metadata.espflash]
partition_table = "partitions.csv"
